--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -47,31 +47,26 @@
 		</div>
 		<div class="header-controls-line" id="welcome-div">
 			<form id="welcome-form" {{if not .IsMobile}}class="left-side"{{end}}>
-				<button id="wellcome-register-user-button">{{.Labels.buttonWelcomeRegister}}</button><label>{{.Labels.labelWelcomeRegister}}</label><br>
-				<button id="wellcome-login-user-button">{{.Labels.buttonWelcomeLogin}}</button><label>{{.Labels.labelWelcomeLogin}}</label><br>
-				<button id="wellcome-start-anonymously-button">{{.Labels.buttonWelcomeStartAnonymously}}</button><label>{{.Labels.labelWelcomeStartAnonymously}}</label><br>
+				<div class="welcome-item{{if .IsMobile}}-mobile{{end}}"><button id="wellcome-register-user-button">{{.Labels.buttonWelcomeRegister}}</button><label>{{.Labels.labelWelcomeRegister}}</label></div>
+				<div class="welcome-item{{if .IsMobile}}-mobile{{end}}"><button id="wellcome-login-user-button">{{.Labels.buttonWelcomeLogin}}</button><label>{{.Labels.labelWelcomeLogin}}</label></div>
+				<div class="welcome-item{{if .IsMobile}}-mobile{{end}}"><button id="wellcome-start-anonymously-button">{{.Labels.buttonWelcomeStartAnonymously}}</button><label>{{.Labels.labelWelcomeStartAnonymously}}</label></div>
 			</form>
 			<br>
 		</div>
 		<div class="header-controls-line" id="signup-div">
-			<form id="signup-form" {{if not .IsMobile}}class="center-side"{{end}}>
-				<div id="signup-form-div">
-					<input type="text" name="email" id="email-signup-input" placeholder="{{.Labels.placeholderEmailInputSignup}}">
-					<input type="password" name="password1" id="password1-signup-input" placeholder="{{.Labels.placeholderPassword1InputSignup}}">
-					<input type="password" name="password2" id="password2-signup-input" placeholder="{{.Labels.placeholderPassword2InputSignup}}">
-					<button id="submit-signup-button">{{.Labels.buttonSubmitSignup}}</button>
-					<button id="cancel-signup-button">{{.Labels.buttonCancelSignup}}</button>
+			<form id="signup-form" {{if not .IsMobile}}class="left-side"{{end}}>
+				<input type="text" name="email" id="email-signup-input" placeholder="{{.Labels.placeholderEmailInputSignup}}">
+				<button id="submit-signup-button">{{.Labels.buttonSubmitSignup}}</button>
+				<button id="cancel-signup-button">{{.Labels.buttonCancelSignup}}</button>
+				<div class="sk-fading-circle" id="signup-spinner-div">
+					<div class="sk-circle1 sk-circle"></div><div class="sk-circle2 sk-circle"></div><div class="sk-circle3 sk-circle"></div>
+					<div class="sk-circle4 sk-circle"></div><div class="sk-circle5 sk-circle"></div><div class="sk-circle6 sk-circle"></div>
+					<div class="sk-circle7 sk-circle"></div><div class="sk-circle8 sk-circle"></div><div class="sk-circle9 sk-circle"></div>
+					<div class="sk-circle10 sk-circle"></div><div class="sk-circle11 sk-circle"></div><div class="sk-circle12 sk-circle"></div>
 				</div>
-				<div id="signup-result-div">
-					<div class="sk-fading-circle" id="signup-spinner-div">
-						<div class="sk-circle1 sk-circle"></div><div class="sk-circle2 sk-circle"></div><div class="sk-circle3 sk-circle"></div>
-						<div class="sk-circle4 sk-circle"></div><div class="sk-circle5 sk-circle"></div><div class="sk-circle6 sk-circle"></div>
-						<div class="sk-circle7 sk-circle"></div><div class="sk-circle8 sk-circle"></div><div class="sk-circle9 sk-circle"></div>
-						<div class="sk-circle10 sk-circle"></div><div class="sk-circle11 sk-circle"></div><div class="sk-circle12 sk-circle"></div>
-					</div>
-					<label id="signup-result-label"></label>
-				</div>
+				<label id="signup-result-label"></label>
 			</form>
+			<br>
 		</div>
 		<div class="header-controls-line" id="user-help-lists-div">
 			<form id="user-form" {{if not .IsMobile}}class="right-side"{{end}}>
