Finish register and change password forms.

--- a/static/changepassword.css
+++ b/static/changepassword.css
@@ -12,6 +12,7 @@ form#change-password-form {
   align-items: center;
 }
 div.line {
+  margin-top: 5px;
   margin-bottom: 5px;
 }
 label#result-label {
