--- a/static/tasks.css
+++ b/static/tasks.css
@@ -125,6 +125,18 @@ label#signup-result-label {
 }
 
 /* ===============================================================
+   Styles of login-form
+   =============================================================== */
+div#login-div {
+  margin: 0px auto 20px auto;
+  max-width: 800px;
+}
+label#login-result-label {
+  color: red;
+  font-weight: bold;
+}
+
+/* ===============================================================
    Styles of user/help/list header line
    =============================================================== */
 select#task-lists-select option:nth-child(1) {
