--- a/static/tasks.css
+++ b/static/tasks.css
@@ -80,6 +80,13 @@ input, select, button {
 div.header-controls-line br {
   clear: both;
 }
+label.clickable {
+  text-decoration: underline;
+  margin-right: 6px;
+}
+label.clickable:hover {
+  cursor: pointer;
+}
 
 /* ===============================================================
    Styles of welcome-form
@@ -141,13 +148,6 @@ label#login-result-label {
    =============================================================== */
 select#task-lists-select option:nth-child(1) {
     font-weight:bold;
-}
-label#help-label {
-	text-decoration: underline;
-  margin-right: 6px;
-}
-label#help-label:hover {
-	cursor: pointer;
 }
 
 /* ===============================================================
