--- a/static/tasks.css
+++ b/static/tasks.css
@@ -150,6 +150,10 @@ select#task-lists-select option:nth-child(1) {
     font-weight:bold;
 }
 
+form#languages-and-help-form {
+  margin-right: 10px
+}
+
 /* ===============================================================
    Styles of task/search header line
    =============================================================== */
