Completely redesigned HTML structure, added modern tags. Mobile devices detected through CSS-media-queries. Using HTML-flex technology to adaptation toolbars and task-table to the screen width of various devices.

--- a/static/changepassword.css
+++ b/static/changepassword.css
@@ -1,21 +1,16 @@
 /* ===============================================================
    Styles of change password page
    =============================================================== */
-div#main-div {
-  margin: 5px auto 5px auto;
+main {
+  margin: 0 auto 0 auto;
   max-width: 800px;
-  font-size : 16px;
 }
-form#change-password-form {
+form {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
 }
-div.line {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-label#result-label {
-  color: red;
-  font-weight: bold;
+div {
+  margin: 5px 0 5px 0;
 }
