--- a/templates/changePassword.html
+++ b/templates/changePassword.html
@@ -23,25 +23,23 @@
 	</script>
 </head>
 <body>
-	<div id="workplace-div">
-		<div id="main-div">
-			<form id="change-password-form" {{if not .IsMobile}}class="left-side"{{end}}>
-				<div class="line" id="password1-div"><input type="password" name="password1" id="password1-input" placeholder="{{.Labels.placeholderPassword1InputSignup}}"></div>
-				<div class="line" id="password2-div"><input type="password" name="password2" id="password2-input" placeholder="{{.Labels.placeholderPassword2InputSignup}}"></div>
-				<div class="line" id="submit-div"><button id="submit-button">{{.Labels.buttonSubmitPassword}}</button></div>
-				<div class="line" id="result-div">
-					<div class="sk-fading-circle" id="spinner-div">
-						<div class="sk-circle1 sk-circle"></div><div class="sk-circle2 sk-circle"></div><div class="sk-circle3 sk-circle"></div>
-						<div class="sk-circle4 sk-circle"></div><div class="sk-circle5 sk-circle"></div><div class="sk-circle6 sk-circle"></div>
-						<div class="sk-circle7 sk-circle"></div><div class="sk-circle8 sk-circle"></div><div class="sk-circle9 sk-circle"></div>
-						<div class="sk-circle10 sk-circle"></div><div class="sk-circle11 sk-circle"></div><div class="sk-circle12 sk-circle"></div>
-					</div>
-					<label id="result-label">{{.Result}}</label>
+	<main>
+		<form>
+			<h1>{{.Labels.titleChangePassword}}:</h2>
+			<div id="password1-div"><input type="password" name="password1" id="password1-input" placeholder="{{.Labels.placeholderPassword1InputSignup}}"></div>
+			<div id="password2-div"><input type="password" name="password2" id="password2-input" placeholder="{{.Labels.placeholderPassword2InputSignup}}"></div>
+			<div id="submit-div"><button id="submit-button">{{.Labels.buttonSubmitPassword}}</button></div>
+			<div id="result-div">
+				<div class="sk-fading-circle" id="spinner-div">
+					<div class="sk-circle1 sk-circle"></div><div class="sk-circle2 sk-circle"></div><div class="sk-circle3 sk-circle"></div>
+					<div class="sk-circle4 sk-circle"></div><div class="sk-circle5 sk-circle"></div><div class="sk-circle6 sk-circle"></div>
+					<div class="sk-circle7 sk-circle"></div><div class="sk-circle8 sk-circle"></div><div class="sk-circle9 sk-circle"></div>
+					<div class="sk-circle10 sk-circle"></div><div class="sk-circle11 sk-circle"></div><div class="sk-circle12 sk-circle"></div>
 				</div>
-				<div class="line" id="return-div"><button id="return-button">{{.Labels.buttonReturn}}</button></div>
-			</form>
-			<br>
-		</div>
-	</div>
+				<label class="result" id="result-label">{{.Result}}</label>
+			</div>
+			<div id="return-div"><button id="return-button">{{.Labels.buttonReturn}}</button></div>
+		</form>
+	</main>
 </body>
 </html>
